--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,10 @@
 			"run_at": "document_end"
     }
   ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "browser_action": {
     "default_icon": "icon.png"
   }
