--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,7 @@
   },
   "browser_action": {
     "default_icon": "icon.png"
-  }
+  },
+  "permissions": ["storage"],
+  "options_page": "options.html"
 }
